--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -7,3 +7,15 @@ nav_bar_equipment_add=Добави Оборудване
 nav_bar_login=Вход
 nav_bar_register=Регистрация
 nav_bar_logout=Изход
+
+welcome_message=Добре дошли
+
+index_main=БЕЗ БОЛКА НЯМА ПОБЕДА
+index_first_paragraph=Красивото тяло и мощният организъм са взаимосвързани и ние можем да ви помогнем и с двете.
+index_get_started=ЗАПОЧНИ
+index_coaches=Квалифицирани треньори
+index_coaches_paragraph=Нашите треньори са с дългогодишен опит в различни видове фитнес и спортове.
+index_individual_approach=Индивидуален подход
+index_individual_approach_paragraph=Всеки клиент на GYM има персонализирана тренировъчна програма
+index_equipment=Фитнес оборудване
+index_equipment_paragraph=Ние си сътрудничим с водещи доставчици на фитнес оборудване, за да ви осигурим превъзходни резултати.
