--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,15 @@ nav_bar_equipment_add=Add Equipment
 nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_logout=Logout
+
+welcome_message=Welcome
+
+index_main=NO PAIN NO GAIN
+index_first_paragraph=Nice-looking body and powerful organism are interconnected and we can help you with both.
+index_get_started=GET STARTED
+index_coaches=Qualified Coaches
+index_coaches_paragraph=Our coaches have years of experience in various types of fitness and sports.
+index_individual_approach=Individual Approach
+index_individual_approach_paragraph=Every client of GYM has a personalized program of training.
+index_equipment=Fitness Equipment
+index_equipment_paragraph=We cooperate with leading fitness equipment suppliers to give you the superior results.
