Supplements page with Paging

--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -4,6 +4,7 @@ nav_bar_coach=Треньор
 nav_bar_exercises=Упражнения
 nav_bar_exercise_add=Добави Упражнение
 nav_bar_equipment_add=Добави Оборудване
+nav_bar_supplement_add=Добави Добавка
 nav_bar_login=Вход
 nav_bar_register=Регистрация
 nav_bar_logout=Изход
