--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -4,6 +4,7 @@ nav_bar_coach=Coach
 nav_bar_exercises=Exercises
 nav_bar_exercise_add=Add Exercise
 nav_bar_equipment_add=Add Equipment
+nav_bar_supplement_add=Add Supplement
 nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_logout=Logout
