--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -2,6 +2,7 @@ nav_bar_home=Фитнес
 nav_bar_language=Език
 nav_bar_coach=Треньор
 nav_bar_exercises=Упражнения
+nav_bar_supplements=Добавки
 nav_bar_exercise_add=Добави Упражнение
 nav_bar_equipment_add=Добави Оборудване
 nav_bar_supplement_add=Добави Добавка
