--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,6 +2,7 @@ nav_bar_home=Fitness
 nav_bar_language=Language
 nav_bar_coach=Coach
 nav_bar_exercises=Exercises
+nav_bar_supplements=Supplements
 nav_bar_exercise_add=Add Exercise
 nav_bar_equipment_add=Add Equipment
 nav_bar_supplement_add=Add Supplement
