Scheduling (main page coaches)

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -11,6 +11,8 @@ nav_bar_register=Register
 nav_bar_logout=Logout
 
 welcome_message=Welcome
+our_coaches=Our Coaches
+
 
 index_main=NO PAIN NO GAIN
 index_first_paragraph=Nice-looking body and powerful organism are interconnected and we can help you with both.
