--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -11,6 +11,7 @@ nav_bar_register=Регистрация
 nav_bar_logout=Изход
 
 welcome_message=Добре дошли
+our_coaches=Нашите Треньори
 
 index_main=БЕЗ БОЛКА НЯМА ПОБЕДА
 index_first_paragraph=Красивото тяло и мощният организъм са взаимосвързани и ние можем да ви помогнем и с двете.
