Some design changes and DB filling

--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -1,5 +1,5 @@
 nav_bar_home=Фитнес
-nav_bar_admin_users=Потрбители
+nav_bar_admin_users=Потребители
 nav_bar_language=Език
 nav_bar_coach=Треньор
 nav_bar_exercises=Упражнения
@@ -14,7 +14,7 @@ nav_bar_logout=Изход
 welcome_message=Добре дошли
 our_coaches=Нашите Треньори
 
-index_main=БЕЗ БОЛКА НЯМА ПОБЕДА
+index_main=БЕЗ БОЛКА НЯМА УСПЕХИ
 index_first_paragraph=Красивото тяло и мощният организъм са взаимосвързани и ние можем да ви помогнем и с двете.
 index_get_started=ЗАПОЧНИ
 index_coaches=Квалифицирани треньори
