Some more design changes

--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -13,6 +13,11 @@ nav_bar_logout=Изход
 
 welcome_message=Добре дошли
 our_coaches=Нашите Треньори
+supplements=Добавки
+my_exercises=Упражнения
+other_exercises=Други упражнения
+not_empty=Полето не трябва да е празно!
+
 
 index_main=БЕЗ БОЛКА НЯМА УСПЕХИ
 index_first_paragraph=Красивото тяло и мощният организъм са взаимосвързани и ние можем да ви помогнем и с двете.
@@ -23,3 +28,20 @@ index_individual_approach=Индивидуален подход
 index_individual_approach_paragraph=Всеки клиент на GYM има персонализирана тренировъчна програма
 index_equipment=Фитнес оборудване
 index_equipment_paragraph=Ние си сътрудничим с водещи доставчици на фитнес оборудване, за да ви осигурим превъзходни резултати.
+
+register_register=Регистрация
+register_role=Роля
+register_username=Потребителско Име
+register_email=Имейл
+register_password=Парола
+register_confirm_password=Потвърди Парола
+register_full_name=Име Фамилия
+register_photo_url=Снимка
+register_biography=Биография
+register_specialty=Специалност
+register_role_error=Трябва да изберете роля!
+register_password_error=Паролата трябва да е между 3 и 20 знака!
+register_username_error=Потребителското име трябва да е между 3 и 20 знака!
+register_biography_error=Паролата трябва да е повече от 3!
+register_full_name_error=Паролата трябва да е повече 3!
+register_photo_url_error=Въведете валиден URl адрес!
