--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -13,7 +13,10 @@ nav_bar_logout=Logout
 
 welcome_message=Welcome
 our_coaches=Our Coaches
-
+supplements=Supplements
+my_exercises=My Exercises
+other_exercises=Other Exercises
+not_empty=Must not be empty!
 
 index_main=NO PAIN NO GAIN
 index_first_paragraph=Nice-looking body and powerful organism are interconnected and we can help you with both.
@@ -24,3 +27,20 @@ index_individual_approach=Individual Approach
 index_individual_approach_paragraph=Every client of GYM has a personalized program of training.
 index_equipment=Fitness Equipment
 index_equipment_paragraph=We cooperate with leading fitness equipment suppliers to give you the superior results.
+
+register_register=Register
+register_role=Role
+register_username=Username
+register_email=Email
+register_password=Password
+register_confirm_password=Confirm Password
+register_full_name=Full Name
+register_photo_url=Photo URL
+register_biography=Biography
+register_specialty=Specialty
+register_role_error=You must select a role!
+register_password_error=Password must be between 3 and 20 characters!
+register_username_error=Username must be between 3 and 20 characters!
+register_biography_error=Bio must be more than 3 characters!
+register_full_name_error=Name must be more than 3 characters!
+register_photo_url_error=Enter valid photo URL!
