--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -10,6 +10,9 @@ nav_bar_supplement_add=Добави Добавка
 nav_bar_login=Вход
 nav_bar_register=Регистрация
 nav_bar_logout=Изход
+footer_made_by=Направено от:
+footer_made_by_name=Александър Деков
+footer_rights=Всички права са запазени! 2025
 
 welcome_message=Добре дошли
 our_coaches=Нашите Треньори
