--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -10,6 +10,9 @@ nav_bar_supplement_add=Add Supplement
 nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_logout=Logout
+footer_made_by=Made by:
+footer_made_by_name=Aleksandar Dekov
+footer_rights=All rights reserved! 2025
 
 welcome_message=Welcome
 our_coaches=Our Coaches
